# mcp-ocr

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hello.py  pyproject.toml
.github/workflows/: publish.yml
src/mcp_ocr/: __init__.py  __main__.py  install_tesseract.py  server.py
tests/: test_ocr.py
