[project]
name = "mcp-ocr"
version = "0.1.0"
description = "MCP server for OCR functionality using Tesseract"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "httpx>=0.24.0"
]
authors = [
    { name = "Rajan Shukla", email = "rshukla2k@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.scripts]
mcp-ocr = "mcp_ocr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ocr"]

[tool.hatch.build.hooks.custom]
dependencies = ["hatch-requirements-txt"]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-ocr"
Documentation = "https://github.com/yourusername/mcp-ocr#readme"
Issues = "https://github.com/yourusername/mcp-ocr/issues"

[tool.hatch.metadata]
allow-direct-references = true
